Fixing Z-index of modal on schedule page for mobile

--- a/schedule/schedule.scss
+++ b/schedule/schedule.scss
@@ -368,7 +368,7 @@ Main Components
 
 .cd-schedule .event-modal {
   position: fixed;
-  z-index: 3;
+  z-index: 2000;
   top: 0;
   right: 0;
   height: 100%;
